# sena

./: .gitignore  Cargo.toml  PLAN.md  README.md  cognee_debug.txt  main.py  pyproject.toml
.github/: VISION.md  claude-convo.md  copilot-instructions.md
ctp/: Cargo.toml  build.rs  manifest.toml
ctp/config/: ctp.toml  ctp.toml.example
ctp/src/: activity.rs  capabilities.rs  config.rs  context_assembler.rs  error.rs  event_bridge.rs  main.rs  pipelines.rs  relevance.rs  thought_queue.rs
daemon-bus/: Cargo.toml  PLAN.md  build.rs
daemon-bus/config/: daemon-bus.toml  daemon-bus.toml.example
daemon-bus/proto/: sena.daemonbus.v1.proto
daemon-bus/src/: config.rs  error.rs  main.rs
daemon-bus/src/arbitration/: mod.rs
daemon-bus/src/boot/: mod.rs
daemon-bus/src/bus/: mod.rs
daemon-bus/src/grpc/: boot_service.rs  event_bus_service.rs  mod.rs
daemon-bus/src/supervisor/: mod.rs
daemon-bus/src/watchdog/: mod.rs
daemon-bus/tests/: boot_capabilities_test.rs
docs/: AI_RULES.md  ARCHITECTURE.md  PLAN.md  PRD.md
inference/: Cargo.toml  build.rs  manifest.toml
inference/config/: inference.toml  inference.toml.example
inference/src/: capabilities.rs  config.rs  error.rs  grpc.rs  inference_engine.rs  main.rs  model_loader.rs  model_registry.rs  request_queue.rs
lora-manager/: manifest.toml
memory-engine/: Cargo.toml  PLAN.md  build.rs  ech0_graph
memory-engine/config/: memory-engine.toml  memory-engine.toml.example
memory-engine/data/: graph.redb
memory-engine/src/: capabilities.rs  config.rs  embedder.rs  engine.rs  error.rs  extractor.rs  grpc.rs  main.rs  profile.rs  queue.rs  tier.rs
model-probe/: Cargo.toml  PLAN.md  build.rs
model-probe/config/: model-probe.toml.example
model-probe/src/: capabilities.rs  config.rs  error.rs  hardware.rs  main.rs  probes.rs
model-probe/src/probe/: context_window.rs  graph_extraction.rs  instruction_following.rs  lora_compat.rs  memory_fidelity.rs  reasoning.rs  structured_output.rs
plans/: boot-sequence-fix-complete.md  ctp-scaffold-plan.md  (+6 more)
prompt-composer/: Cargo.toml  IMPLEMENTATION.md  build.rs  manifest.toml
prompt-composer/config/: prompt-composer.toml  prompt-composer.toml.example
prompt-composer/src/: assembler.rs  capabilities.rs  config.rs  error.rs  esu.rs  generated.rs  grpc.rs  lib.rs  main.rs  token_counter.rs
prompt-composer/tests/: event_emission_test.rs
reactive-loop/: Cargo.toml  build.rs  manifest.toml
reactive-loop/config/: reactive-loop.toml  reactive-loop.toml.example
reactive-loop/src/: capabilities.rs  config.rs  error.rs  generated.rs  grpc.rs  handler.rs  main.rs
reactive-loop/tests/: event_emission_test.rs
ui/: .eslintrc.cjs  Cargo.toml  build.rs  index.html  manifest.toml  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ui/config/: ui.toml  ui.toml.example
ui/src/: app.rs  components.rs  config.rs  debug_state.rs  grpc.rs  lib.rs  main.rs  main.tsx  state.rs  theme.rs
ui/src-tauri/: CLICK_THROUGH.md  Cargo.toml  build.rs  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: capabilities.rs  commands.rs  config.rs  daemon_launcher.rs  gguf.rs  grpc.rs  hotkey.rs  job_object.rs  main.rs  overlay.rs  state.rs  toast.rs  tray.rs
ui/src/components/: chat_input.rs  debug.rs  debug_panel.rs  inspect_button.rs  message_list.rs  mod.rs
ui/src/components/CapabilityChips/: CapabilityChips.css  CapabilityChips.tsx
ui/src/components/CapabilityDetail/: CapabilityDetail.css  CapabilityDetail.tsx
ui/src/components/Dropdown/: Dropdown.css  Dropdown.tsx
ui/src/components/Settings/: RestartBadge.css  RestartBadge.tsx  SettingsField.css  SettingsField.tsx
ui/src/components/TitleBar/: TitleBar.tsx
ui/src/components/Toast/: Toast.css  Toast.tsx  ToastStack.tsx
ui/src/components/Tooltip/: Tooltip.css  Tooltip.tsx
ui/src/components/debug/: boot_signal_history.rs  event_feed.rs  memory_stats.rs  subsystem_health.rs  system_stats_bar.rs  thought_stream.rs  vram_bar.rs
ui/src/components/icons/: IconBell.tsx  IconBootTimeline.tsx  IconChat.tsx  IconCheck.tsx  IconChevronDown.tsx  IconChevronRight.tsx  IconClose.tsx  IconConversationTimeline.tsx  IconDragHandle.tsx  IconEventBus.tsx  IconFolder.tsx  IconMemoryStats.tsx  IconModel.tsx  IconPin.tsx  IconPinActive.tsx  IconPromptTrace.tsx  IconReboot.tsx  IconResources.tsx  IconSend.tsx  IconSettings.tsx  IconSubsystemHealth.tsx  IconThought.tsx  IconThoughtStream.tsx  IconWarning.tsx  index.ts
ui/src/constants/: colors.ts  panels.ts  strings.ts
ui/src/hooks/: useOverlayAnimation.ts  useTauriEvent.ts  useWindowDragSave.ts
ui/src/styles/: index.css  theme.css
ui/src/types/: index.ts
ui/src/utils/: time.ts
ui/src/windows/boot-timeline/: BootTimeline.css  BootTimeline.tsx  CapabilityDetail.tsx  index.html  main.tsx
ui/src/windows/chat/: Chat.css  Chat.tsx  ThoughtBlock.css  ThoughtBlock.tsx  index.html  main.tsx
ui/src/windows/conversation-timeline/: ConversationTimeline.tsx  index.html  main.tsx
ui/src/windows/event-bus/: EventBus.tsx  index.html  main.tsx
ui/src/windows/memory-stats/: MemoryStats.tsx  index.html  main.tsx
ui/src/windows/model-panel/: ModelPanel.css  ModelPanel.tsx  index.html  main.tsx
ui/src/windows/notification-history/: NotificationHistory.tsx  index.html  main.tsx
ui/src/windows/prompt-trace/: PromptTrace.tsx  index.html  main.tsx
ui/src/windows/resources/: Resources.tsx  index.html  main.tsx
ui/src/windows/settings/: Settings.css  Settings.tsx  index.html  main.tsx
ui/src/windows/settings/tabs/: AppearanceTab.tsx  CtpTab.tsx  DaemonBusTab.tsx  InferenceTab.tsx  LoggingTab.tsx  MemoryEngineTab.tsx  OverlayTab.tsx  PromptComposerTab.tsx
ui/src/windows/subsystem-health/: SubsystemHealth.tsx  index.html  main.tsx
ui/src/windows/thought-stream/: ThoughtStream.tsx  index.html  main.tsx
ui/src/windows/toast/: ToastWindow.tsx  index.html  main.tsx
ui/src/windows/vignette/: Vignette.tsx  index.html  main.tsx
ui/src/windows/widget-bar/: WidgetBar.css  WidgetBar.tsx  index.html  main.tsx
(+37 files in other folders)
