[project]
name = "sena-rebuilt-2-26-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cognee>=0.5.3",
    "ollama>=0.6.1",
    "tiktoken>=0.12.0",
    "toon-format>=0.1.0",
    "torch>=2.10.0",
    "transformers>=4.57.6",
]

[tool.uv.sources]
toon-format = { git = "https://github.com/toon-format/toon-python.git", rev = "main" }
