[package]
name = "inference"
version = "0.1.0"
edition = "2021"
description = "Sena inference subsystem — exclusive owner of llama-cpp-rs, serves InferenceService gRPC"
publish = false

[[bin]]
name = "inference"
path = "src/main.rs"

[dependencies]
# LLM inference — same version as memory-engine
llama-cpp-2 = "0.1"
# Text encoding for token detokenization
encoding_rs = "0.8"
# Async runtime
tokio = { version = "1", features = ["full"] }
# gRPC
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
# Streaming gRPC responses
tokio-stream = "0.1"
# Serialization and config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
# Error handling
thiserror = "2"
# Top-level error handling in main.rs only
anyhow = "1"
# IDs
uuid = { version = "1", features = ["v4"] }
# Timestamps
chrono = { version = "0.4", features = ["serde"] }
# Float ordering for priority queue
ordered-float = "4"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"
