[package]
name = "prompt-composer"
version = "0.1.0"
edition = "2021"
description = "Sena prompt-composer subsystem — dynamic prompt assembly, TOON/JSON encoding via ESU, context window budget management"
publish = false

[[bin]]
name = "prompt-composer"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
toon-format = { version = "0.4", default-features = false }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"
