[package]
name = "reactive-loop"
version = "0.1.0"
edition = "2021"
description = "Sena reactive loop — user message handling, prompt orchestration, Priority Tier 1"
publish = false

[[bin]]
name = "reactive-loop"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"
