[package]
name = "sena-ui"
version = "0.1.0"
edition = "2021"
description = "Sena UI — Freya-based native GUI with chat interface and debug panel"
publish = false

[[bin]]
name = "sena-ui"
path = "src/main.rs"

[dependencies]
freya = "0.4.0-rc.14"
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12"
